--- a/dispatcher/templates/dispatcher/index.html
+++ b/dispatcher/templates/dispatcher/index.html
@@ -11,15 +11,26 @@
     <div class="card-body" id="card-body">
       <div class="d-flex justify-content-between">
         <h4>Информация о проекте:</h4>
-        <button type="button" class="btn btn-danger ms-2" type="button" name="modul_reset">x</button>
+        <button type="button" class="btn btn-danger ms-2" type="button" id="project_name_reset" name="project_name_reset">x</button>
       </div>
     </div>
     <hr>
     <div class="d-flex align-items-center mb-2">
       <label for="project_name" class="me-2">Название проекта:</label>
-      <input type="text" name="project_name" placeholder="{{ project.name|default:0 }}" id="project_name" value="{{ meta.project_name }}" class="form-control me-5" style="width: 460px;border: 0.01px solid gray;">
+      <input type="text" name="project_name" placeholder="{{ project.name|default:0 }}" id="project_name" class="form-control me-5" style="width: 535px;border: 0.01px solid gray;">
     </div>
-    
+    <div class="d-flex align-items-center mb-2">
+      <label for="project_name" class="me-2" style="width: 136px;" >Цвет ЛДСП:</label>
+      <input type="text" name="ldsp_color" placeholder="{{ project.ldsp_color|default:0 }}" id="ldsp_color" class="form-control me-2" style="width: 200px;border: 0.01px solid gray;">
+      <label for="project_name" class="me-2" style="width: 120px;">Цвет металла:</label>
+      <input type="text" name="metal_color" placeholder="{{ project.metal_color|default:0 }}" id="metal_color" class="form-control me-5" style="width: 200px;border: 0.01px solid gray;">
+    </div>
+    <div class="d-flex align-items-center mb-2">
+      <label for="project_name" class="me-2" style="width: 136px;" >ДСП р. за 1 м.кв:</label>
+      <input type="text" name="ldsp_price" placeholder="{{ project.ldsp_price|default:0 }}" id="ldsp_price" class="form-control me-2" style="width: 200px;border: 0.01px solid gray;">
+      <label for="project_name" class="me-2" style="width: 120px;" >Скидка %:</label>
+      <input type="text" name="discount" placeholder="{{ project.discount|default:0 }}" id="discount" class="form-control me-2" style="width: 200px;border: 0.01px solid gray;">
+    </div>
   </div>
 
   <!--КОНФИГУРАТОР МОДУЛЕЙ-->
@@ -42,11 +53,12 @@
         <div class="d-flex flex-column">
           <div class="mb-3">
             <!--ВЫБОР МОДУЛЯ SELECT-->
-            <select name="modul_select_0" id="modul_select_0" class="form-select mb-2" style="width: 600px;">
-                <option>выберите модуль</option>
-                {% for modul in moduls %}
-                <option>{{ modul.art }} {{ modul.name }}</option>
-                {% endfor %}
+            <!--<select name="modul_select_0" id="modul_select_0" class="form-select mb-2" style="width: 680px;">-->
+            <select name="modul_select_0" id="modul_select_0" class="form-select mb-2">
+              <option>выберите модуль</option>
+              {% for modul in moduls %}
+              <option>{{ modul.art }} {{ modul.name }}</option>
+              {% endfor %}
             </select>
 
             <!--ВЫБОР ЭКРАНА RADIOBUTTON-->
@@ -79,7 +91,7 @@
         </div>
         <!--ТОЧКА ВСТАВКИ КАРТИНКИ-->
           <figure style="text-align: center;color:red;font-weight: 600;font-size: 1.1rem;">
-            <img src="{% static "images/select_modul.png" %}" alt="нет изображения" id="modul_img_0">
+            <img src="{% static "images/select_modul.png" %}" alt="нет изображения" id="modul_img_0" class="cropped-image">
             <figcaption id="modul_img_caption_0"></figcaption>
           </figure>
 
@@ -90,17 +102,18 @@
   </div>
 
 
-    <p style="text-align: center;" id="stop_dinamic">Общая длина: <span id="all_lens" style="color:red;font-weight: 600;font-size: 1.1rem;"></span> см (учитываются только прямые модули.)</p>
+    <!--<p style="text-align: center;" id="stop_dinamic">Общая длина: <span id="all_lens" style="color:red;font-weight: 600;font-size: 1.1rem;"></span> см (учитываются только прямые модули.)</p>-->
+    <p style="text-align: center;" id="stop_dinamic"><span id="all_lens" style="color:red;font-weight: 600;font-size: 1.1rem;"></span></p>
     <!--КНОПКИ ДОБАВЛЕНИЯ УДАЛЕНИЯ БЛОКОВ МОДУЛЕЙ-->
     <div class="d-flex justify-content-between">
       <div class="d-flex">
         <button type="button" class="btn btn-dark me-2 " id="add_block" name="modul_add_block">+</button>
         <button type="button" class="btn btn-danger me-2" id="minus_block" name="modul_minus_block">-</button>
-        {% if debug %}
+        <!--
           <button type="button" class="btn btn-danger me-2" id="test" name="test">test</button>
           <button type="button" class="btn btn-dark me-2" id="test2" name="test2">test 2</button>
           <button type="button" class="btn btn-dark me-2" id="test3" name="test3">test 3</button>
-        {% endif %}
+        -->
       </div>
     </div>
   </div> <!--КОНЕЦ КОНФИГУРАТОРА МОДУЛЕЙ-->
@@ -116,23 +129,21 @@
       <div class="d-flex justify-content-between align-items-start">
         <div class="d-flex flex-column">
           <div class="d-flex align-items-center mb-2">
-            <label for="monitor_type_1" class="me-2" style="width: 260px;">Один монитор на стойке <span style="color:red;font-weight: 600;">36</span> мм:</label>
+            <label for="monitor_type_1" class="me-2">Один монитор на стойке <span style="color:red;font-weight: 600;">36</span> мм:</label>
             <input type="number" name="monitor_type_1" min="0" id="monitor_type_1" value="{{ options.monitor_type_1|default:0 }}" class="form-control me-5" style="width: 100px;border: 0.01px solid gray;">
           </div>
           <div class="d-flex align-items-center mb-2">
-            <label for="monitor_type_2" class="me-2" style="width: 260px;">Два монитора на стойке <span style="color:red;font-weight: 600;">76</span> мм:</label>
+            <label for="monitor_type_2" class="me-2">Два монитора на стойке <span style="color:red;font-weight: 600;">76</span> мм :</label>
             <input type="number" name="monitor_type_2" min="0" id="monitor_type_2" value="{{ options.monitor_type_2|default:0 }}" class="form-control me-5" style="width: 100px;border: 0.01px solid gray;">
           </div>
           <div class="d-flex align-items-center">
-            <label for="monitor_type_3" class="me-2"  style="width: 260px;">Один монитор на стойке <span style="color:red;font-weight: 600;">76</span> мм:</label>
+            <label for="monitor_type_3" class="me-2">Один монитор на стойке <span style="color:red;font-weight: 600;">76</span> мм:</label>
             <input type="number" name="monitor_type_3" min="0" id="monitor_type_3" value="{{ options.monitor_type_3|default:0 }}" class="form-control me-5" style="width: 100px;border: 0.01px solid gray;">
           </div>
-          
-  
     </div>
-      <img src="https://www.unitex.ru/images/dispetch/aksessuary/%D0%A4%D0%9B-1715,45.jpg" alt="" width=180 height=180>
-      <img src="https://www.unitex.ru/images/dispetch/aksessuary/%D0%A4%D0%9B-1715,85.jpg" alt="" width=180 height=180>
-      <img src="https://www.unitex.ru/images/dispetch/aksessuary/%D0%BA%D1%80%D0%BE%D0%BD%D1%88%D1%82%D0%B5%D0%B9%D0%BD__.jpg" alt="" width=180 height=180>
+      <!--<img src="https://www.unitex.ru/images/dispetch/aksessuary/%D0%A4%D0%9B-1715,45.jpg" alt=""  class="cropped-image">-->
+      <!--<img src="https://www.unitex.ru/images/dispetch/aksessuary/%D0%A4%D0%9B-1715,85.jpg" alt=""  class="cropped-image">-->
+      <img src="https://www.unitex.ru/images/dispetch/aksessuary/%D0%BA%D1%80%D0%BE%D0%BD%D1%88%D1%82%D0%B5%D0%B9%D0%BD__.jpg" alt="" class="cropped-image">
   
     </div>
     </div>
@@ -148,11 +159,11 @@
     <div class="d-flex justify-content-between align-items-start">
       <div class="d-flex flex-column">
         <div class="d-flex align-items-center mb-2">
-          <label for="electric_power" class="me-2"  style="width: 260px;">Блок розеток силовой <span style="color:red;font-weight: 600;">7x220</span>:</label>
+          <label for="electric_power" class="me-2">Блок розеток силовой <span style="color:red;font-weight: 600;">7x220</span>:</label>
           <input type="number" name="electric_power" min="0" id="electric_power" value="{{ options.electric_power|default:0 }}" class="form-control me-5" style="width: 100px;border: 0.01px solid gray;">
         </div>
         <div class="d-flex align-items-center mb-2">
-          <label for="electric_rj45" class="me-2"  style="width: 260px;">Панель коммутационная <span style="color:red;font-weight: 600;">24хRJ45</span>:</label>
+          <label for="electric_rj45" class="me-2">Панель коммутационная <span style="color:red;font-weight: 600;">24хRJ45</span>:</label>
           <input type="number" name="electric_rj45" min="0" id="electric_rj45" value="{{ options.electric_rj45|default:0 }}" class="form-control me-5" style="width: 100px;border: 0.01px solid gray;">
         </div>
       </div>
@@ -186,7 +197,7 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Отмена</button>
-            <button type="submit" class="btn btn-danger" name="all_reset">Да, очистить</button>
+            <button type="button" id="reset_all" class="btn btn-danger" name="all_reset">Да, очистить</button>
           </div>
         </div>
       </div>
@@ -201,33 +212,17 @@
   const baseUrl = window.location.origin; // Получаем базовый URL
   // ПЕРЕДАЧА ПУТИ К VIEW get_moduls
   var getModulsUrl = "{% url 'dispatcher:get_moduls' %}"; // Относительный URL к view
-  var send_session = "{% url 'dispatcher:send_session' %}" // Относительный URL к view 
-  var send_for_check = "{% url 'dispatcher:check_parametrs' %}"
-  var get_one_modul = '{% url "dispatcher:get_one_modul" %}'
+  var send_session = "{% url 'dispatcher:send_session' %}"; // Относительный URL к view 
+  var send_for_check = "{% url 'dispatcher:check_parametrs' %}";
+  var get_one_modul = '{% url "dispatcher:get_one_modul" %}';
+  //var default_project_name = '{{ default }}'
+  var default_project_name = JSON.parse('{{ default|escapejs }}');
+  
   
   getModulsUrl = `${baseUrl}${getModulsUrl}`; // полный URL для получения модулей (для ajax запроса)
   send_session = `${baseUrl}${send_session}`; // полный URL для получения сессии (для ajax запроса)
   send_for_check = `${baseUrl}${send_for_check}`;// полный URL для получения сессии (для ajax запроса)
-  get_one_modul = `${baseUrl}${get_one_modul}`;
-
-
-  // ОЧИСТКА ПОЛЕЙ МОНИТОРОВ
-  document.getElementById('monitor_reset').addEventListener('click', function(event) {
-    event.preventDefault(); // отмена стандартного поведения формы
-
-    var monitorTypes = ["monitor_type_1","monitor_type_2","monitor_type_3"]
-    for (var i=0; i < monitorTypes.length; i++){
-      document.getElementById(monitorTypes[i]).value = 0
-    }
-  });
-
-
-  // ОЧИСТКА ПОЛЕЙ РОЗЕТКИ + МОНИТОРЫ
-  document.getElementById('electric_ajax').addEventListener('click', function(event) {
-    event.preventDefault(); // отмена стандартного поведения формы
-    document.getElementById("electric_power").value = 0;
-    document.getElementById("electric_rj45").value = 0;
-  });
+  get_one_modul = `${baseUrl}${get_one_modul}`; // настройки в информации о проекте по умолчанию
 </script>
 
 {% endblock content %}
