--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -139,3 +139,12 @@
     border-color: red; /* Цвет рамки при фокусе */
     box-shadow: 0 0 0 0.2rem rgba(255, 0, 0, 0.25); /* Красная тень при фокусе */
   }
+
+
+
+  .cropped-image {
+    width: 150px; /* Ширина контейнера */
+    height: 150px; /* Высота контейнера */
+    object-fit: cover; /* Изображение будет обрезано, чтобы заполнить контейнер */
+    object-position: center; /* Центрирование изображения */
+}
