--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -2,7 +2,7 @@
 
 {% block title %}{{ title }}{% endblock title %}
 {% block content %}
-<div class="shadow p-3 mb-4 mt-4 bg-white rounded"> 
+<div class="custom-shadow"> 
   <h1>Главная страница</h1>
   <p>В разработке...</p>
 </div>
