--- a/templates/base.html
+++ b/templates/base.html
@@ -12,10 +12,12 @@
   <title>{% block title %}{% endblock title %}</title>
 </head>
 
+{% comment %} <body style="font-family: 'Lato', sans-serif;"> {% endcomment %}
 <body>
-
+  
   {% url 'main:index' as main_index_url %} <!-- URL на главную страницу -->
   {% url 'dispatcher:index' as dispatcher_index_url %} <!-- URL на главную страницу приложения Расчёта диспетчерской мебели -->
+  {% url "dispatcher:show_result" as disp_res %}
   {% url 'price_list:index' as price_index_url %}  <!-- URL настройки прайс-листов -->
 
   <!--ШАПКА (МЕНЮ)-->
@@ -25,9 +27,9 @@
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         <!--НАВИГАЦИЯ ПО СТРАНИЦАМ (МЕНЮ)-->
           <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-              <li><a href="{{ main_index_url }}" class="nav-link px-2 d-block h-100 {% if request.path == main_index_url %}active{% endif %} text-white">Главная</a></li>
-              <li><a href="{{ dispatcher_index_url }}" class="nav-link px-2 d-block h-100 {% if request.path == dispatcher_index_url %}active{% endif %} text-white">Диспетчерская</a></li>
-              <li><a href="{{ price_index_url }}" class="nav-link px-2 d-block h-100 {% if request.path == price_index_url %}active{% endif %} text-white">Прайс</a></li>
+              <li><a href="{{ main_index_url }}" class="nav-link px-2 d-block h-100 {% if request.path == main_index_url %}active{% endif %}">Главная</a></li>
+              <li><a href="{{ dispatcher_index_url }}" class="nav-link px-2 d-block h-100 {% if request.path == dispatcher_index_url or request.path == disp_res %}active{% endif %}">Диспетчерская</a></li>
+              <li><a href="{{ price_index_url }}" class="nav-link px-2 d-block h-100 {% if request.path == price_index_url %}active{% endif %}">Прайс</a></li>
           </ul>
 
           <!--ПОЛЕ ПОИСКА НА ШАПКЕ-->
@@ -37,8 +39,8 @@
 
           <!--КНОПКИ LOGIN SIGN-IN-->
           <div class="text-end">
-              <button type="button" class="btn btn-outline-light me-2">Login</button>
-              <button type="button" class="btn btn-danger">Sign-up</button>
+              {% comment %} <button type="button" class="btn btn-outline-light me-2">Login</button> {% endcomment %}
+              <button type="button" class="btn btn-danger">поиск</button>
           </div>
       </div>
     </div>
@@ -48,5 +50,6 @@
     {% block content %}
     {% endblock content %}
   </div>
+  
 </body>
 </html>
