Начата разработка модуля прайс, подготовка обработки введенных пользователем компонентов

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -3,7 +3,8 @@
 {% block title %}{{ title }}{% endblock title %}
 {% block content %}
 <div class="custom-shadow"> 
-  <h1>Главная страница</h1>
-  <p>В разработке...</p>
+    <img src="https://www.unitex.ru/image_cache/530x375_cut_-images-dispetch-interer_slider-2.jpg" alt="">
+    <h1>Главная страница</h1>
+    <p>Последние расчёты...</p>
 </div>
 {% endblock content %}
